# systems-of-linear-algebraic-equations

./: .gitignore  CMakeLists.txt  README.md
src/: CMakelists.txt  CSR.cpp  CSR.h  householder.cpp  householder.h  progonka.cpp  progonka.h  simple_matrix.cpp  simple_matrix.h  three_diag_table.cpp  three_diag_table.h  vector_operations.cpp  vector_operations.h
test/: CMakelists.txt  test1.cpp  test3.cpp  test_CSR.cpp  test_all_vs_cheb.cpp  test_householder.cpp  test_iterative_methods.cpp  test_simple_matrix.cpp  test_time_iterative_methods.cpp  test_transpose_matrix.cpp  test_unit_matrix.cpp  test_vector.cpp
time_test_results/: 0_error.txt  0_time.txt  1_error.txt  1_time.txt  2_time.txt  3_error.txt  3_time.txt  4_error.txt  4_time.txt  5_time.txt  6_error.txt  6_time.txt  7_error.txt  7_time.txt  8_error.txt  8_time.txt  Cheb_error.txt  Cheb_time.txt  GS_error.txt  GS_time.txt  Jacobi_time.txt  MPI_error.txt  MPI_time.txt
